tests/baselines/reference/amdDependencyCommentName4.errors.txt
tests/cases/compiler/amdDependencyCommentName4.ts(8,21): error TS2307: Cannot find module 'aliasedModule1' or its corresponding type declarations.
tests/cases/compiler/amdDependencyCommentName4.ts(11,26): error TS2307: Cannot find module 'aliasedModule2' or its corresponding type declarations.
tests/cases/compiler/amdDependencyCommentName4.ts(14,15): error TS2307: Cannot find module 'aliasedModule3' or its corresponding type declarations.
tests/cases/compiler/amdDependencyCommentName4.ts(17,21): error TS2307: Cannot find module 'aliasedModule4' or its corresponding type declarations.


==== tests/cases/compiler/amdDependencyCommentName4.ts (4 errors) ====
    ///<amd-dependency path='aliasedModule5' name='n1'/>
    ///<amd-dependency path='unaliasedModule3'/>
    ///<amd-dependency path='aliasedModule6' name='n2'/>
    ///<amd-dependency path='unaliasedModule4'/>
    
    import "unaliasedModule1";
    
    import r1 = require("aliasedModule1");
                        ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'aliasedModule1' or its corresponding type declarations.
    r1;
    
    import {p1, p2, p3} from "aliasedModule2";
                             ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'aliasedModule2' or its corresponding type declarations.
    p1;
    
    import d from "aliasedModule3";
                  ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'aliasedModule3' or its corresponding type declarations.
    d;
    
    import * as ns from "aliasedModule4";
                        ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'aliasedModule4' or its corresponding type declarations.
    ns;
    
    import "unaliasedModule2";